feat: Created uploading user profile image endpoint
